# FreshmanCode

BasicInterpreter/: Basic-Demo-64bit_for_mac_to_be_rename  CMakeLists.txt  README.md  score  score.cpp
BasicInterpreter/Basic/: Basic.cpp  evalstate.cpp  evalstate.h  exp.cpp  exp.h  parser.cpp  parser.h  program.cpp  program.h  statement.cpp  statement.h
BasicInterpreter/StanfordCPPLib/: direction.cpp  direction.h  error.cpp  error.h  foreach.h  ginteractors.cpp  ginteractors.h  gmath.cpp  gmath.h  gobjects.cpp  gobjects.h  graph.h  grid.h  gtimer.cpp  gtimer.h  gtypes.cpp  gtypes.h  hashmap.cpp  hashmap.h  hashset.h  lexicon.cpp  lexicon.h  main.cpp  map.h  point.cpp  point.h  pqueue.h  queue.h  random.cpp  set.h  simpio.cpp  stack.h  startup.cpp  strlib.cpp  strlib.h  thread.cpp  thread.h  tokenscanner.cpp  tokenscanner.h  vector.h
BasicInterpreter/StanfordCPPLib/private/: randompatch.h  tplatform.h
ColorfulLiquid/: 1.in  1.out  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in  checker  checker.cpp  code  main.cpp
ICPC/: 13.  1347_o.cpp  main.cpp
Mother'sDay/: CMakeCache.txt  Makefile  cmake_install.cmake  code  contol.h  main.cpp  mother.cpp  out  risc-v32.h  tool.h  untitled3  untitled3.cbp
TrainTicketSystem/: BPlusTree.h  CacheMap.h  FileException.h  HistoryVersion.h  MemoryRiver.h  MemoryRiverCpp.h  bpt_linked_leafnode.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
brainfuck/: CMakeLists.txt  a+b.b  array.b  code  division.b  helloworld.b  ifelse.b  interpreter.c  max.b  print.b
int2048/: int2048.hpp  main.cpp
俄罗斯方块/: 1.in  (+15 more)
(+225 files in other folders)
